--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gl-matrix": "^3.4.3",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
