--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "tesseract-renderer",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "homepage": "https://armemius.github.io/tesseractus",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "gh-pages": "^5.0.0",
     "gl-matrix": "^3.4.3",
     "mobx": "^6.10.0",
     "mobx-react-lite": "^4.0.3",
